--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -214,7 +214,12 @@
       <Filter>Objects\Manager</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Slider\GiseGauge.cpp" />
-    <ClCompile Include="Scripts\GameManager.cpp" />
+    <ClCompile Include="Scripts\GameManager.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\Scenes\SelectScene\LevelSelectManager.cpp">
+      <Filter>Objects\SceneObject\SelectScene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -359,6 +364,11 @@
       <Filter>Objects\Manager</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\Slider\GiseGauge.h" />
-    <ClInclude Include="Scripts\GameManager.h" />
+    <ClInclude Include="Scripts\GameManager.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Scenes\SelectScene\LevelSelectManager.h">
+      <Filter>Objects\SceneObject\SelectScene</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
