feat - 맞는 이펙트, 적 공격 방어 이펙트 추가
hiteffect는 call할때 호출할 갯수, 백터를 넘겨주면됨
적 공격 방어 이펙트는 백터리스트로 위치를 설정한후 call때는 int로 호출할 애니메이션만 불러주면됨

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -335,6 +335,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Script\Effect\EnemyAttackEffect.cpp" />
+    <ClCompile Include="Script\Effect\HitEffect.cpp" />
     <ClCompile Include="Script\Effect\Finaleffect.cpp" />
     <ClCompile Include="Script\Effect\EffectMonoB.cpp" />
     <ClCompile Include="Script\giseSlider\GiseGauge.cpp" />
@@ -361,6 +363,8 @@
     <ClCompile Include="Script\Sound\SoundEnd.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Script\Effect\EnemyAttackEffect.h" />
+    <ClInclude Include="Script\Effect\HitEffect.h" />
     <ClInclude Include="Script\Effect\Finaleffect.h" />
     <ClInclude Include="Script\Effect\EffectMonoB.h" />
     <ClInclude Include="Script\giseSlider\GiseGauge.h" />
