feat - HP slider Object 추가 및 Animation SetCliping 추가
애니메이션에도 SetCliping 기능 사용 가능 및 HP slider 오브젝트 추가

--- a/WorkSpace/KJH/KJH.vcxproj
+++ b/WorkSpace/KJH/KJH.vcxproj
@@ -335,6 +335,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Script\HpBar\HpGauge.cpp" />
     <ClCompile Include="Script\Effect\EnemyAttackEffect.cpp" />
     <ClCompile Include="Script\Effect\HitEffect.cpp" />
     <ClCompile Include="Script\Effect\Finaleffect.cpp" />
@@ -363,6 +364,7 @@
     <ClCompile Include="Script\Sound\SoundEnd.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Script\HpBar\HpGauge.h" />
     <ClInclude Include="Script\Effect\EnemyAttackEffect.h" />
     <ClInclude Include="Script\Effect\HitEffect.h" />
     <ClInclude Include="Script\Effect\Finaleffect.h" />
