fix -  아군이 연격 상태이고, 연격 시간이 지났을 때,  상태를 벗어나지 않는 버그 수정

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -391,6 +391,7 @@
     <ClCompile Include="Scripts\Effect\EffectInstance.cpp" />
     <ClCompile Include="Scripts\Effect\EffectManager.cpp" />
     <ClCompile Include="Scripts\Effect\EffectObject.cpp" />
+    <ClCompile Include="Scripts\HpBar\HpGauge.cpp" />
     <ClCompile Include="Scripts\LiveObject\Enemy.cpp" />
     <ClCompile Include="Scripts\LiveObject\LiveObject.cpp" />
     <ClCompile Include="Scripts\LiveObject\Player.cpp" />
@@ -442,6 +443,7 @@
     <ClInclude Include="Scripts\Effect\EffectInstance.h" />
     <ClInclude Include="Scripts\Effect\EffectManager.h" />
     <ClInclude Include="Scripts\Effect\EffectObject.h" />
+    <ClInclude Include="Scripts\HpBar\HpGauge.h" />
     <ClInclude Include="Scripts\LiveObject\Enemy.h" />
     <ClInclude Include="Scripts\LiveObject\LiveObject.h" />
     <ClInclude Include="Scripts\LiveObject\Player.h" />
