feat - 리소스 추가, 셀렉트 연출 + 구름 연출 매니저 추가함
햄부기 햄북 햄북북

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -354,6 +354,8 @@
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
     <ClCompile Include="Objects\Scenes\SelectScene\LevelSelectManager.cpp" />
+    <ClCompile Include="Objects\Scenes\SelectScene\SelectEffectManager.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\CloudManager.cpp" />
     <ClCompile Include="Scripts\GameManager.cpp" />
     <ClCompile Include="Objects\Manager\ChargedSlashManager.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.cpp" />
@@ -406,6 +408,9 @@
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
     <ClInclude Include="Objects\Scenes\SelectScene\LevelSelectManager.h" />
+    <ClInclude Include="Objects\Scenes\SelectScene\SelectEffectManager.h" />
+    <ClInclude Include="Objects\Scenes\Stage\CloudManager.h" />
+    <ClInclude Include="Objects\Scenes\TitleScene\EffectProgress.h" />
     <ClInclude Include="Scripts\GameManager.h" />
     <ClInclude Include="Objects\Manager\ChargedSlashManager.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.h" />
