feat - 음량 조절 패널 추가
Esc 누르면 나오는 패널 추가

아직 음량 슬라이더 추가 안함, 음소거 코드는 따로 추가해야함

--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -221,6 +221,9 @@
       <Filter>Objects\SceneObject\SelectScene</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\HpBar\HpGauge.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.cpp">
+      <Filter>Objects\SceneObject\Stage\EscMenu</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -372,5 +375,8 @@
       <Filter>Objects\SceneObject\SelectScene</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\HpBar\HpGauge.h" />
+    <ClInclude Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.h">
+      <Filter>Objects\SceneObject\Stage\EscMenu</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
