--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -402,6 +402,7 @@
     <ClCompile Include="Objects\SliceObject\SlicedObject.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\StageESCPanel.cpp" />
     <ClCompile Include="Scripts\Slider\GiseGauge.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -455,6 +456,7 @@
     <ClInclude Include="Objects\SliceObject\SlicedObject.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\StageESCPanel.h" />
     <ClInclude Include="Scripts\Slider\GiseGauge.h" />
+    <ClInclude Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
