--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -221,6 +221,9 @@
       <Filter>Objects\SceneObject\SelectScene</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\HpBar\HpGauge.cpp" />
+    <ClCompile Include="Objects\Sound\SoundEnd.cpp" />
+    <ClCompile Include="Objects\Sound\SoundPlayScene.cpp" />
+    <ClCompile Include="Objects\Sound\SoundTittle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -372,5 +375,8 @@
       <Filter>Objects\SceneObject\SelectScene</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\HpBar\HpGauge.h" />
+    <ClInclude Include="Objects\Sound\SoundEnd.h" />
+    <ClInclude Include="Objects\Sound\SoundPlayScene.h" />
+    <ClInclude Include="Objects\Sound\SoundTittle.h" />
   </ItemGroup>
 </Project>
