--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -70,6 +70,9 @@
     <Filter Include="Objects\SceneObject\Stage\EscMenu">
       <UniqueIdentifier>{18408eb4-7ef4-4c7b-86f6-c544076e2588}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Objects\SceneObject\Stage\StageResult">
+      <UniqueIdentifier>{18e439a1-1c82-4ced-a601-c586fbef8e47}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp">
@@ -233,6 +236,9 @@
     <ClCompile Include="Objects\Sound\SoundEnd.cpp" />
     <ClCompile Include="Objects\Sound\SoundPlayScene.cpp" />
     <ClCompile Include="Objects\Sound\SoundTittle.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\StageResult\StageResult.cpp">
+      <Filter>Objects\SceneObject\Stage\StageResult</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -399,5 +405,8 @@
     <ClInclude Include="Objects\Sound\SoundEnd.h" />
     <ClInclude Include="Objects\Sound\SoundPlayScene.h" />
     <ClInclude Include="Objects\Sound\SoundTittle.h" />
+    <ClInclude Include="Objects\Scenes\Stage\StageResult\StageResult.h">
+      <Filter>Objects\SceneObject\Stage\StageResult</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
