--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -236,8 +236,9 @@
     <ClCompile Include="Objects\Sound\SoundEnd.cpp" />
     <ClCompile Include="Objects\Sound\SoundPlayScene.cpp" />
     <ClCompile Include="Objects\Sound\SoundTittle.cpp" />
-    <ClCompile Include="Objects\Scenes\Stage\StageResult\StageResult.cpp">
-      <Filter>Objects\SceneObject\Stage\StageResult</Filter>
+<ClCompile Include="Objects\Scenes\Stage\StageResult\StageResult.cpp">
+  <Filter>Objects\SceneObject\Stage\StageResult</Filter>
+</ClCompile>
     <ClCompile Include="Objects\Scenes\Stage\BackboardObject.cpp">
       <Filter>Objects\SceneObject\Stage</Filter>
     </ClCompile>
@@ -409,6 +410,7 @@
     <ClInclude Include="Objects\Sound\SoundTittle.h" />
     <ClInclude Include="Objects\Scenes\Stage\StageResult\StageResult.h">
       <Filter>Objects\SceneObject\Stage\StageResult</Filter>
+	</ClInclude>
     <ClInclude Include="Objects\Scenes\Stage\BackboardObject.h">
       <Filter>Objects\SceneObject\Stage</Filter>
     </ClInclude>
