--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -410,6 +410,7 @@
     <ClCompile Include="Scripts\Slider\GiseGauge.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\StageResult\StageResult.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\Stage2\StageBGI2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -472,6 +473,7 @@
     <ClInclude Include="Scripts\Slider\GiseGauge.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.h" />
     <ClInclude Include="Objects\Scenes\Stage\StageResult\StageResult.h" />
+    <ClInclude Include="Objects\Scenes\Stage\Stage2\StageBGI2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
