feat - 텍스트 박스 로직 추가
Scene 시작시 게임로직이 멈추고 텍스트 박스가 뜨도록 함
클릭에 딜레이 제한 설정 완료

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\BubbleBox\BubbleBox.cpp" />
     <ClCompile Include="Objects\Scenes\SelectScene\LevelSelectManager.cpp" />
     <ClCompile Include="Objects\Scenes\SelectScene\SelectEffectManager.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\CloudManager.cpp" />
@@ -410,6 +411,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\BubbleBox\BubbleBox.h" />
     <ClInclude Include="Objects\Scenes\SelectScene\LevelSelectManager.h" />
     <ClInclude Include="Objects\Scenes\SelectScene\SelectEffectManager.h" />
     <ClInclude Include="Objects\Scenes\Stage\CloudManager.h" />
