--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -411,6 +411,7 @@
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\StageResult\StageResult.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\Stage2\StageBGI2.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\Stage3\StageBGI3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -474,6 +475,7 @@
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\SoundMutePanel.h" />
     <ClInclude Include="Objects\Scenes\Stage\StageResult\StageResult.h" />
     <ClInclude Include="Objects\Scenes\Stage\Stage2\StageBGI2.h" />
+    <ClInclude Include="Objects\Scenes\Stage\Stage3\StageBGI3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
