--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,8 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\BubbleBox\BubbleBox3.cpp" />
+    <ClCompile Include="Scripts\BubbleBox\BubbleBox2.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox.cpp" />
     <ClCompile Include="Objects\Scenes\SelectScene\LevelSelectManager.cpp" />
     <ClCompile Include="Objects\Scenes\SelectScene\SelectEffectManager.cpp" />
@@ -416,6 +418,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\BubbleBox\BubbleBox3.h" />
+    <ClInclude Include="Scripts\BubbleBox\BubbleBox2.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox.h" />
     <ClInclude Include="Objects\Scenes\SelectScene\LevelSelectManager.h" />
     <ClInclude Include="Objects\Scenes\SelectScene\SelectEffectManager.h" />
