feat - HP 게이지 추가, top ui 게임 오브젝트 추가

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -415,6 +415,7 @@
     <ClCompile Include="Objects\Scenes\Stage\StageResult\StageResult.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\Stage2\StageBGI2.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\Stage3\StageBGI3.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\StageTopUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
@@ -482,6 +483,7 @@
     <ClInclude Include="Objects\Scenes\Stage\StageResult\StageResult.h" />
     <ClInclude Include="Objects\Scenes\Stage\Stage2\StageBGI2.h" />
     <ClInclude Include="Objects\Scenes\Stage\Stage3\StageBGI3.h" />
+    <ClInclude Include="Objects\Scenes\Stage\StageTopUI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
