--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -267,6 +267,12 @@
       <Filter>Scripts\BubbleBox</Filter>
     </ClCompile>
     <ClCompile Include="Objects\Scenes\Stage\StageTopUI.cpp" />
+    <ClCompile Include="Objects\Scenes\Stage\StageEnemyProfile.cpp">
+      <Filter>Objects\SceneObject\Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="Objects\Scenes\Stage\StagePlayerProfile.cpp">
+      <Filter>Objects\SceneObject\Stage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -455,5 +461,11 @@
       <Filter>Scripts\BubbleBox</Filter>
     </ClInclude>
     <ClInclude Include="Objects\Scenes\Stage\StageTopUI.h" />
+    <ClInclude Include="Objects\Scenes\Stage\StagePlayerProfile.h">
+      <Filter>Objects\SceneObject\Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Scenes\Stage\StageEnemyProfile.h">
+      <Filter>Objects\SceneObject\Stage</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
