feat - 타이틀 텍스트 박스 추가
타이틀 텍스트 박스 오브젝트 추가

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\BubbleBox\BubbleBoxTittle.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox3.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox2.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox.cpp" />
@@ -418,6 +419,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\BubbleBox\BubbleBoxTittle.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox3.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox2.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox.h" />
