feat - 이펙트 연결중 - 연격 차징 + 홀드 + 연격 슬래쉬 이펙트 추가함<<슬래쉬 이펙트 위치가 조금 틀려서 아트 리소스를 새로 받아야 합니다 오스트랄로피테쿠스아파렌시스

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -361,6 +361,10 @@
     <ClCompile Include="Objects\Sound\SoundEnd.cpp" />
     <ClCompile Include="Objects\Sound\SoundPlayScene.cpp" />
     <ClCompile Include="Objects\Sound\SoundTittle.cpp" />
+    <ClCompile Include="Scripts\Effect\EffectMonoB.cpp" />
+    <ClCompile Include="Scripts\Effect\EnemyAttackEffect.cpp" />
+    <ClCompile Include="Scripts\Effect\Finaleffect.cpp" />
+    <ClCompile Include="Scripts\Effect\HitEffect.cpp" />
     <ClCompile Include="Scripts\GameManager.cpp" />
     <ClCompile Include="Objects\Manager\ChargedSlashManager.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.cpp" />
@@ -425,6 +429,10 @@
     <ClInclude Include="Objects\Sound\SoundEnd.h" />
     <ClInclude Include="Objects\Sound\SoundPlayScene.h" />
     <ClInclude Include="Objects\Sound\SoundTittle.h" />
+    <ClInclude Include="Scripts\Effect\EffectMonoB.h" />
+    <ClInclude Include="Scripts\Effect\EnemyAttackEffect.h" />
+    <ClInclude Include="Scripts\Effect\Finaleffect.h" />
+    <ClInclude Include="Scripts\Effect\HitEffect.h" />
     <ClInclude Include="Scripts\GameManager.h" />
     <ClInclude Include="Objects\Manager\ChargedSlashManager.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.h" />
