--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -255,6 +255,18 @@
     <ClCompile Include="Objects\Scenes\Stage\Stage3\StageBGI3.cpp">
       <Filter>Objects\SceneObject\Stage\Stage3</Filter>
     </ClCompile>
+    <ClCompile Include="Scripts\Effect\EffectMonoB.cpp">
+      <Filter>Scripts\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Effect\EnemyAttackEffect.cpp">
+      <Filter>Scripts\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Effect\Finaleffect.cpp">
+      <Filter>Scripts\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Effect\HitEffect.cpp">
+      <Filter>Scripts\Effect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -433,6 +445,18 @@
     </ClInclude>
     <ClInclude Include="Objects\Scenes\Stage\Stage3\StageBGI3.h">
       <Filter>Objects\SceneObject\Stage\Stage3</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Effect\EffectMonoB.h">
+      <Filter>Scripts\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Effect\EnemyAttackEffect.h">
+      <Filter>Scripts\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Effect\Finaleffect.h">
+      <Filter>Scripts\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Effect\HitEffect.h">
+      <Filter>Scripts\Effect</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
