feat - signBord 추가, 상 중 하 패링 가드에 대한 글자가 뜸
잘뜸

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Objects\Common\SignBoard.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBoxTittle.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox3.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox2.cpp" />
@@ -428,6 +429,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Objects\Common\SignBoard.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBoxTittle.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox3.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox2.h" />
