--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -353,6 +353,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\BubbleBox\BubbleEnd.cpp" />
     <ClCompile Include="Objects\Common\SignBoard.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBoxTittle.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleBox3.cpp" />
@@ -370,6 +371,7 @@
     <ClCompile Include="Scripts\Effect\EnemyAttackEffect.cpp" />
     <ClCompile Include="Scripts\Effect\Finaleffect.cpp" />
     <ClCompile Include="Scripts\Effect\HitEffect.cpp" />
+    <ClCompile Include="Scripts\End\EndBackground.cpp" />
     <ClCompile Include="Scripts\GameManager.cpp" />
     <ClCompile Include="Objects\Manager\ChargedSlashManager.cpp" />
     <ClCompile Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.cpp" />
@@ -430,6 +432,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\BubbleBox\BubbleEnd.h" />
     <ClInclude Include="Objects\Common\SignBoard.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBoxTittle.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleBox3.h" />
@@ -448,6 +451,7 @@
     <ClInclude Include="Scripts\Effect\EnemyAttackEffect.h" />
     <ClInclude Include="Scripts\Effect\Finaleffect.h" />
     <ClInclude Include="Scripts\Effect\HitEffect.h" />
+    <ClInclude Include="Scripts\End\EndBackground.h" />
     <ClInclude Include="Scripts\GameManager.h" />
     <ClInclude Include="Objects\Manager\ChargedSlashManager.h" />
     <ClInclude Include="Objects\Scenes\Stage\EscMenu\EscContinueButton.h" />
