--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -269,6 +269,9 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y /d /i /s "$(SolutionDir)Resource\*" "$(TargetDir)Resource\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='LSH|x64'">
     <ClCompile>
