feat - 생각하는노드매니저 생성
기사의 여행 휴리스틱 공부 완료
기다려라 선형보간의 신이 간다

--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -302,6 +302,9 @@
     <ClCompile Include="Objects\Common\BattleBoard.cpp">
       <Filter>Objects\Common</Filter>
     </ClCompile>
+    <ClCompile Include="Objects\Manager\ThinkingPatternManager.cpp">
+      <Filter>Objects\Manager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -521,6 +524,9 @@
     </ClInclude>
     <ClInclude Include="Objects\Common\BattleBoard.h">
       <Filter>Objects\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Manager\ThinkingPatternManager.h">
+      <Filter>Objects\Manager</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
