--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -360,6 +360,7 @@
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
     <ClCompile Include="Objects\Common\BattleBoard.cpp" />
+    <ClCompile Include="Objects\Common\BlinkNodeObject.cpp" />
     <ClCompile Include="Objects\Manager\ThinkingPatternManager.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleEnd.cpp" />
     <ClCompile Include="Objects\Common\SignBoard.cpp" />
@@ -441,6 +442,7 @@
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
     <ClInclude Include="Objects\Common\BattleBoard.h" />
+    <ClInclude Include="Objects\Common\BlinkNodeObject.h" />
     <ClInclude Include="Objects\Manager\ThinkingPatternManager.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleEnd.h" />
     <ClInclude Include="Objects\Common\SignBoard.h" />
