--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -305,6 +305,9 @@
     <ClCompile Include="Objects\Manager\ThinkingPatternManager.cpp">
       <Filter>Objects\Manager</Filter>
     </ClCompile>
+    <ClCompile Include="Objects\Common\BlinkNodeObject.cpp">
+      <Filter>Objects\Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -527,6 +530,9 @@
     </ClInclude>
     <ClInclude Include="Objects\Manager\ThinkingPatternManager.h">
       <Filter>Objects\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Common\BlinkNodeObject.h">
+      <Filter>Objects\Common</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
